# ApexLib

./: .gitignore  .gitmodules  ApexLib.vcxproj  ApexLib.vcxproj.filters  CMakeLists.txt  README.md  testing.cpp
include/: ADF.h  AVTX.h  AdfBaseObject.h  AdfRegistry.h  AmfEnums.h  AmfFormatEvaluators.h  AmfMesh.h  AmfModel.h  AmfProperties.h  ApexApi.h  DeformPoints.h  RBM.h  RBMClassesHU.h  RBMClassesJC2.h  RBMClassesJC3.h  RBNClasses.h  RBSClasses.h  StreamPatch.h  StuntAreas.h  Units.h  lookup3.h
include/apex/: adf.hpp  adf_array.hpp  adf_bbox.hpp  adf_deferred.hpp  adf_instance.hpp  adf_string.hpp  amf.hpp  deform_points.hpp  stream_patch.hpp  stunt_areas.hpp
include/apex/props/: amf_mesh.hpp  common_flags.hpp  gz_material.hpp  hu_material.hpp  jc2_material.hpp  jc3_material.hpp  jc4_material.hpp  mm_material.hpp  r2_material.hpp
include/property_classes/: AmfGZMaterial.h  AmfHUMaterial.h  AmfJC4Material.h  AmfMeshProperties.h  AmfR2Material.h  RbmJC2Material.h  RbmJC3Material.h  RbnMaterial.h
src/: ADF.cpp  ADF.h  ADFReg.cpp  AVTX.cpp  AmfFormatEvaluators.h  AmfMesh.cpp  AmfMesh.h  AmfMesh_V1.h  AmfMesh_V2.h  AmfModel.cpp  AmfModel.h  AmfModel_V1.h  CMakeLists.txt  DeformPoints.cpp  RBM.cpp  RBM.h  RBMClassesHU.cpp  RBMClassesJC2.cpp  RBMClassesJC2.h  RBMClassesJC3.cpp  RBMReg.cpp  RBNClasses.cpp  RBSClasses.cpp  StreamPatch.cpp  StuntAreas.cpp  Units.h  lookup3.c
src/adf/: adf.cpp  adf.hpp  amf_buffer.hpp  amf_codec.hpp  amf_mesh.cpp  amf_mesh.hpp  amf_mesh_v1.hpp  amf_mesh_v2.hpp  amf_model.cpp  amf_model.hpp  amf_model_v1.hpp  amf_stream_attribute.cpp  amf_stream_attribute.hpp  cpp_dump.cpp  deform_points.cpp  fodder.cpp  prop_registry.cpp  stream_patch.cpp  stunt_areas.cpp  xml.cpp
src/rbm/: rbm.cpp  rbm.hpp
zaway/: RBMClassesJC2.cpp  RBMClassesJC3.cpp  RBMClassesJC3.h  RBNClasses.h
